micro_ecomm/infra/k8s/microservices/review-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
  labels:
    app: review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
      - name: review-service
        image: your-dockerhub-username/review-service:latest
        ports:
        - containerPort: 5007
