micro_ecomm/infra/k8s/microservices/review-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: review-service
spec:
  type: ClusterIP
  ports:
    - port: 5007
      targetPort: 5007
  selector:
    app: review-service
