micro_ecomm/infra/k8s/microservices/review-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: review-service-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - http:
      paths:
      - path: /review
        pathType: Prefix
        backend:
          service:
            name: review-service
            port:
              number: 5007
